--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server",
-    "prod": "NODE_ENV=production ./node_modules/.bin/webpack -p"
+    "prod": "NODE_ENV=production ./node_modules/.bin/webpack -p --progress --bail"
   },
   "repository": {
     "type": "git",
