--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
@@ -29,11 +30,15 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "tachyons-sass": "^4.7.4",
     "webpack": "^3.2.0",
     "webpack-dev-server": "^2.5.1"
   }
